--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -11,76 +11,64 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{你的大名}
+\name{张思淡}
 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
+  \email{zsd780885029@gmail.com} \textperiodcentered\ 
+  \phone{(+86) 188-6811-6322} \textperiodcentered\ 
+  \github[zhang0peter]{https://github.com/zhang0peter}
+}
  
-\section{\faGraduationCap\  教育背景}
-\datedsubsection{\textbf{上海交通大学}, 上海}{2013 -- 至今}
-\textit{在读硕士研究生}\ 信息与通信工程, 预计 2016 年 3 月毕业
-\datedsubsection{\textbf{西安电子科技大学}, 西安, 陕西}{2009 -- 2013}
-\textit{学士}\ 通信工程
+\section{\faGraduationCap\ 教育经历}
+\datedsubsection{\textbf{浙江大学}, 杭州, 中国}{2016.9 -- 至今}
+\textit{在读本科生}\ 信息安全, 预计 2020 年 6 月毕业
 
-\section{\faUsers\ 实习/项目经历}
-\datedsubsection{\textbf{黑科技公司} 上海}{2015年3月 -- 2015年5月}
-\role{实习}{经理: 高富帅}
-xxx后端开发
+\section{\faUsers\ 实习经历}
+\datedsubsection{\textbf{腾讯安全实验室}, 深圳, 中国}{2019.9 -- 至今}
 \begin{itemize}
-  \item 实现了 xxx 特性
-  \item 后台资源占用率减少8\%
-  \item xxx
+  \item 负责漏洞扫描和修复
 \end{itemize}
 
-\datedsubsection{\textbf{分布式科学上网姿势}}{2014年6月 -- 至今}
-\role{Golang, Linux}{个人项目，和富帅糕合作开发}
-\begin{onehalfspacing}
-分布式负载均衡科学上网姿势, https://github.com/cyfdecyf/cow
-\begin{itemize}
-  \item 修复了连接未正常关闭导致文件描述符耗尽的 bug
-  \item 使用Chord 哈希 URL, 实现稳定可靠地分流
-  \item xxx (尽量使用量化的客观结果)
-\end{itemize}
-\end{onehalfspacing}
+\section{\faGithubAlt\ 个人项目}
 
-\datedsubsection{\textbf{\LaTeX\ 简历模板}}{2015 年5月 -- 至今}
-\role{\LaTeX, Python}{个人项目}
-\begin{onehalfspacing}
-优雅的 \LaTeX\ 简历模板, https://github.com/billryan/resume
+\datedsubsection{\textbf{SDN智能防火墙}}{\url{https://github.com/zhang0peter/SDN-firewall}}
+一个智能的SDN防火墙。
 \begin{itemize}
-  \item 容易定制和扩展
-  \item 完善的 Unicode 字体支持，使用 \XeLaTeX\ 编译
-  \item 支持 FontAwesome 4.5.0
+  \item 基于Python的SDN防火墙，易于安装和使用。
+  \item 拦截规则由人工智能学习得来，可以随时更新，非常强大。
 \end{itemize}
-\end{onehalfspacing}
 
-% Reference Test
-%\datedsubsection{\textbf{Paper Title\cite{zaharia2012resilient}}}{May. 2015}
-%An xxx optimized for xxx\cite{verma2015large}
-%\begin{itemize}
-%  \item main contribution
-%\end{itemize}
+\datedsubsection{\textbf{power漏洞扫描器}}{\url{https://github.com/zhang0peter/power}}
+一个web安全扫描器。
+\begin{itemize}
+  \item 基于Python的web安全扫描器，全方面扫描web漏洞。
+  \item 支持多个插件，提供配置文件的高亮、补全和查错。
+\end{itemize}
+
+\section{\faHeartO\ 成就}
+\datedline{在
+  \href{https://github.com/zhang0peter} {GitHub}
+  上，累计贡献代码超过
+  \textbf{10000}
+  行，获得star超过5000}{Aug. 2019}
 
 \section{\faCogs\ IT 技能}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
   \item 编程语言: C == Python > C++ > Java
   \item 平台: Linux
-  \item 开发: xxx
+  \item 开发: SDN,web安全
 \end{itemize}
 
-\section{\faHeartO\ 获奖情况}
-\datedline{\textit{第一名}, xxx 比赛}{2013 年6 月}
-\datedline{其他奖项}{2015}
+
+
 
 \section{\faInfo\ 其他}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item 技术博客: http://blog.yours.me
-  \item GitHub: https://github.com/username
-  \item 语言: 英语 - 熟练(TOEFL xxx)
+  \item 技术博客: http://zhangsidan.com
+  \item GitHub: https://github.com/zhang0peter
+  \item 语言: 英语 - 熟练(TOEFL 110分)
 \end{itemize}
 
 %% Reference
